<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".verification.Verification2Fragment">

    <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/face_verification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <androidx.camera.view.PreviewView
            android:id="@+id/view_finder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:scaleType="fillCenter"
            app:implementationMode="compatible"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,1:1" />

    <!--When manual confirmation is required-->
    <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="@id/view_finder"
            app:layout_constraintStart_toStartOf="@id/view_finder"
            app:layout_constraintEnd_toEndOf="@id/view_finder"
            app:layout_constraintBottom_toBottomOf="@id/view_finder" />

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="@id/view_finder"
            app:layout_constraintEnd_toEndOf="@id/view_finder"
            app:layout_constraintTop_toTopOf="@id/view_finder"
            app:layout_constraintBottom_toBottomOf="@id/view_finder"
            app:lottie_rawRes="@raw/scanning_annimation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

    <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:id="@+id/infoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/init_camera"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_finder" />

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoText" />

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/cameraSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/front_camera"
            app:icon="@drawable/ic_flip_camera"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/infoText" />

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/tryagainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@id/cancelButton"
            app:layout_constraintTop_toBottomOf="@id/infoText"
            android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/approveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoText"
            android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>