<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/face_verification"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            app:layout_constraintStart_toStartOf="@id/camera_preview"
            app:layout_constraintEnd_toEndOf="@id/camera_preview"
            app:layout_constraintTop_toTopOf="@id/camera_preview"
            app:layout_constraintBottom_toBottomOf="@id/camera_preview"
            app:lottie_rawRes="@raw/scanning_annimation"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

    <androidx.camera.view.PreviewView
            android:id="@+id/camera_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:scaleType="fillCenter"
            app:implementationMode="compatible"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,1:1" />

    <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:id="@+id/infoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/init_camera"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_preview" />

    <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoText" />


</androidx.constraintlayout.widget.ConstraintLayout>